// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`denormalize denormalizes entities 1`] = `
Array [
  Object {
    "id": 1,
    "type": "foo",
  },
  Object {
    "id": 2,
    "type": "bar",
  },
]
`;

exports[`denormalize denormalizes nested entities 1`] = `
Object {
  "author": Object {
    "id": "8472",
    "name": "Paul",
  },
  "body": "This article is great.",
  "comments": Array [
    Object {
      "comment": "I like it!",
      "id": "comment-123-4738",
      "user": Object {
        "id": "10293",
        "name": "Jane",
      },
    },
  ],
  "id": "123",
  "title": "A Great Article",
}
`;

exports[`denormalize denormalizes with function as idAttribute 1`] = `
Array [
  Object {
    "guest": null,
    "id": "1",
    "name": "Esther",
  },
  Object {
    "guest": Object {
      "guest_id": 1,
    },
    "id": "2",
    "name": "Tom",
  },
]
`;

exports[`normalize can use fully custom entity classes 1`] = `
Object {
  "entities": Immutable.Map {
    "children": Immutable.Map {
      4: Object {
        "id": 4,
        "name": "lettuce",
      },
    },
    "food": Immutable.Map {
      "1234": Object {
        "children": Array [
          4,
        ],
        "name": "tacos",
        "uuid": "1234",
      },
    },
  },
  "result": Object {
    "schema": "food",
    "uuid": "1234",
  },
}
`;

exports[`normalize ignores null values 1`] = `
Object {
  "entities": Immutable.Map {},
  "result": Array [
    null,
  ],
}
`;

exports[`normalize ignores null values 2`] = `
Object {
  "entities": Immutable.Map {},
  "result": Array [
    undefined,
  ],
}
`;

exports[`normalize ignores null values 3`] = `
Object {
  "entities": Immutable.Map {},
  "result": Array [
    false,
  ],
}
`;

exports[`normalize normalizes entities 1`] = `
Object {
  "entities": Immutable.Map {
    "tacos": Immutable.Map {
      1: Object {
        "id": 1,
        "type": "foo",
      },
      2: Object {
        "id": 2,
        "type": "bar",
      },
    },
  },
  "result": Array [
    1,
    2,
  ],
}
`;

exports[`normalize normalizes nested entities 1`] = `
Object {
  "entities": Immutable.Map {
    "users": Immutable.Map {
      "8472": Object {
        "id": "8472",
        "name": "Paul",
      },
      "10293": Object {
        "id": "10293",
        "name": "Jane",
      },
    },
    "comments": Immutable.Map {
      "comment-123-4738": Object {
        "comment": "I like it!",
        "id": "comment-123-4738",
        "user": "10293",
      },
    },
    "articles": Immutable.Map {
      "123": Object {
        "author": "8472",
        "body": "This article is great.",
        "comments": Array [
          "comment-123-4738",
        ],
        "id": "123",
        "title": "A Great Article",
      },
    },
  },
  "result": "123",
}
`;

exports[`normalize passes over pre-normalized values 1`] = `
Object {
  "entities": Immutable.Map {
    "articles": Immutable.Map {
      "123": Object {
        "author": 1,
        "id": "123",
        "title": "normalizr is great!",
      },
    },
  },
  "result": "123",
}
`;

exports[`normalize uses the non-normalized input when getting the ID for an entity 1`] = `
Object {
  "entities": Immutable.Map {
    "users": Immutable.Map {
      "456": Object {
        "id": "456",
      },
    },
    "recommendations": Immutable.Map {
      "456": Object {
        "user": "456",
      },
    },
  },
  "result": "456",
}
`;

exports[`normalize uses the non-normalized input when getting the ID for an entity 2`] = `
Array [
  Array [
    Object {
      "user": Object {
        "id": "456",
      },
    },
    Object {
      "user": Object {
        "id": "456",
      },
    },
    null,
  ],
  Array [
    Object {
      "user": Object {
        "id": "456",
      },
    },
    Object {
      "user": Object {
        "id": "456",
      },
    },
    null,
  ],
]
`;
